# Computer_Vision

./: .gitignore  README.md  cvat_script.py  pyproject.toml  requirements.txt
asmt/: EDA.ipynb  classification_template_tested.ipynb  clustering_template.ipynb  regression_template.ipynb  regression_template_tested.ipynb
classification/: results.md
classification/src/: Convolution_NN.py  knn_classification.py
generative_models/: results.md
generative_models/src/: finetune.py  inference.py
homeworks/: classification_output.txt  classification_task1.py  object_detection_task2.py  segmentation_task.py
homeworks/classification/: results.md
homeworks/metric_learning/: results.md
homeworks/object_detection/: results.md
homeworks/segmentation/: results.md
metric_learning/src/: similarity_search.py
notebooks/: Image classification.ipynb  Object detection.ipynb  task 2 - camera calibration.ipynb
object_detection/: opt.yaml  results.md
segmentation/: results.md
segmentation/src/: segmentation_task.py  utils.py
src/: Convolution_NN.py  classification_task.py  classification_task1.py  knn_classification.py  object_detection.py  pansharp.py  preprocessor.py  segmentation.py  segmentation_task.py  similarity_search.py  tracking.py  tracking_51.py  utils.py
src/configs/: classification_config.py  segment_config.py
src/metric_learning/: preprocessing.py  sampler.py
src/segmentation/: blob_detection.py  dice_loss.py  segmentation.py  utils.py
tracking/: README.md  metrics_results.md  results.md  tracking.ipynb  tracking_results.html
(+2 files in other folders)
